--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@ body {
 
 h1,
 h2,
-h3,
 h4,
 h5,
 h6,
@@ -29,14 +28,15 @@ h1 {
 h2 {
   font-weight: 500;
   font-size: 24px;
-  padding: 20px 0;
+  padding: 10px 0;
   text-align: center;
 }
 
 h3 {
-  font-weight: 500;
-  font-size: 16px;
-  color: #fff;
+  font-weight: 600;
+  font-size: 22px;
+  color: rgb(223, 39, 39);
+  text-align: center;
 }
 
 p {
@@ -87,7 +87,7 @@ nav ul li a:hover {
 section {
   background-color: #fff;
   width: 94%;
-  padding: 20px 3%;
+  padding: 10px 3%;
 }
 
 /* index */
@@ -96,6 +96,11 @@ section {
   text-align: center;
 }
 
+.rules-text-01 p{
+
+  
+
+}
 .index-categories-list {
   display: flex;
   justify-content: space-between;
