--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ p {
 nav {
   width: 100%;
   height: 60px;
-  background-color: #0078c2;
+  background-color: #dd7926;
 }
 
 nav .wrapper {
@@ -55,7 +55,7 @@ nav .wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #0078c2;
+  background-color: #dd7926;
 }
 
 nav img {
@@ -72,8 +72,8 @@ nav ul li {
 
 nav ul li a {
   font-family: "Roboto", sans-serif;
-  font-weight: 300;
-  font-size: 14px;
+  font-weight: 500;
+  font-size: 16px;
   color: #ffffff;
   text-decoration: none;
   padding: 0 16px;
@@ -81,7 +81,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-  color: #31a6ff;
+  color: #fff;
 }
 
 section {
@@ -96,11 +96,6 @@ section {
   text-align: center;
 }
 
-.rules-text-01 p{
-
-  
-
-}
 .index-categories-list {
   display: flex;
   justify-content: space-between;
