--- a/style.css
+++ b/style.css
@@ -38,19 +38,19 @@ h3 {
   font-weight: 500;
   font-size: 16px;
   color: #111;
-  text-align:center;
+  text-align: center;
 }
 
 h4 {
   text-align: center;
-  color:#111;
+  color: #111;
 }
 
 p {
   font-weight: 400;
   font-size: 16px;
-  text-align: justify;  
-  line-height: 28px;  
+  text-align: justify;
+  line-height: 28px;
   padding: 10px;
   margin-top: 10px;
 }
@@ -58,7 +58,7 @@ p {
 nav {
   width: 100%;
   height: 60px;
-  background-color: #0078c2;
+  background-color: #dd7926;
 }
 
 nav .wrapper {
@@ -66,7 +66,7 @@ nav .wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #0078c2;
+  background-color: #dd7926;
 }
 
 nav img {
@@ -74,6 +74,7 @@ nav img {
 }
 
 nav ul {
+  color: #fff;
 }
 
 nav ul li {
@@ -83,16 +84,16 @@ nav ul li {
 
 nav ul li a {
   font-family: "Roboto", sans-serif;
-  font-weight: 300;
-  font-size: 14px;
-  color: #ffffff;
+  font-weight: 500;
+  font-size: 20px;
+  color: #ffffff !important;
   text-decoration: none;
   padding: 0 16px;
   text-transform: uppercase;
 }
 
 nav ul li a:hover {
-  color: #31a6ff;
+  color: #dd7926;
 }
 
 section {
@@ -101,33 +102,28 @@ section {
   padding: 20px 3%;
   font-weight: 400;
   font-size: 16px;
-  text-align: justify;  
-  line-height: 28px;  
+  text-align: justify;
+  line-height: 28px;
   margin-top: 10px;
   list-style-type: square;
 }
 
-
-section .index-categories-rules{
-
+section .index-categories-rules {
   font-weight: 400;
   font-size: 16px;
-  text-align: justify;  
-  line-height: 28px;  
+  text-align: justify;
+  line-height: 28px;
   padding: 10px;
   margin-top: 10px;
-
 }
 
-.rules p{
-
+.rules p {
   font-weight: 400;
   font-size: 16px;
-  text-align: justify;  
-  line-height: 28px;  
+  text-align: justify;
+  line-height: 28px;
   padding: 10px;
-  margin-top: 10px
-
+  margin-top: 10px;
 }
 
 /* index */
@@ -152,13 +148,12 @@ section .index-categories-rules{
 }
 
 .index-categories-rules p {
-  
-    margin: 1em 10%;
-    padding: 1em 3em;
-    border: 1px solid #999;
-    background: #eee;
-    justify-content: left;
-    font: "tahoma"
+  margin: 1em 10%;
+  padding: 1em 3em;
+  border: 1px solid #999;
+  background: #eee;
+  justify-content: left;
+  font: "tahoma";
 }
 /* sign up */
 
@@ -178,14 +173,12 @@ section .index-categories-rules{
 }
 
 .index-catergories.list {
-
   margin: 1em 10%;
-    padding: 1em 3em;
-    border: 1px solid #999;
-    background: #eee;
-    justify-content: left;
-    font: "tahoma"
-
+  padding: 1em 3em;
+  border: 1px solid #999;
+  background: #eee;
+  justify-content: left;
+  font: "tahoma";
 }
 
 .signup-form form input {
