--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ section {
   list-style-type: square;
 }
 
-section .index-categories-rules {
+.index-categories-rules {
   font-weight: 400;
   font-size: 16px;
   text-align: justify;
@@ -189,12 +189,30 @@ section .index-categories-rules {
 
 .signup-form form button {
   display: block;
-  padding: 10px 20px;
+  padding: 20px 20px;
   margin: 10px auto;
   cursor: pointer;
 }
 
-.select form {
+.select {
   background-color: #fff;
-  display: block;
+  padding: 10px 20px;
+  margin: 10px auto;
+  position: fixed;
+  border: #007ecc;
+}
+.select form button {
+  font-size: 15px;
+  font-weight: 500;
+  letter-spacing: 0;
+  text-transform: capitalize;
+  color: #fff !important;
+  background: #22c8e5;
+  border-radius: 20px;
+  line-height: 38px;
+  padding: 0 40px;
+}
+
+.select select {
+  display: initial;
 }
